crates/config/tests/snapshots/close_brace_deeply_indented.snap
---
source: crates/config/tests/snapshots.rs
---
# close-brace-deeply-indented

## Input

```mical
s {
  k v
            }

```

## JSON

```json
{
  "sk": "v"
}
```

vim:ft=markdown
