crates/config/tests/snapshots/close_brace_word_after.snap
---
source: crates/config/tests/snapshots.rs
---
# close-brace-word-after

## Input

```mical
s {
  }value
}

```

## Parser Error

```
12..12: missing value for the key

```

## JSON

```json
{}
```

vim:ft=markdown
