crates/config/tests/snapshots/comment_after_close_brace.snap
---
source: crates/config/tests/snapshots.rs
---
# comment-after-close-brace

## Input

```mical
s {
  k v
}
# after close

```

## JSON

```json
{
  "sk": "v"
}
```

vim:ft=markdown
