crates/config/tests/snapshots/comment_at_eof.snap
---
source: crates/config/tests/snapshots.rs
---
# comment-at-eof

## Input

```mical
key value
# comment
```

## JSON

```json
{
  "key": "value"
}
```

vim:ft=markdown
