crates/config/tests/snapshots/comment_between_blocks.snap
---
source: crates/config/tests/snapshots.rs
---
# comment-between-blocks

## Input

```mical
a {
  x 1
}
# between
b {
  y 2
}

```

## JSON

```json
{
  "ax": 1,
  "by": 2
}
```

vim:ft=markdown
