crates/config/tests/snapshots/comment_consecutive.snap
---
source: crates/config/tests/snapshots.rs
---
# comment-consecutive

## Input

```mical
# one
# two
# three
a 1

```

## JSON

```json
{
  "a": 1
}
```

vim:ft=markdown
