crates/config/tests/snapshots/comment_deeply_indented.snap
---
source: crates/config/tests/snapshots.rs
---
# comment-deeply-indented

## Input

```mical
        # deep comment
k v

```

## JSON

```json
{
  "k": "v"
}
```

vim:ft=markdown
