crates/config/tests/snapshots/comment_full_line.snap
---
source: crates/config/tests/snapshots.rs
---
# comment-full-line

## Input

```mical
# This is a full-line comment
key value

```

## JSON

```json
{
  "key": "value"
}
```

vim:ft=markdown
