crates/config/tests/snapshots/comment_hash_at_eof.snap
---
source: crates/config/tests/snapshots.rs
---
# comment-hash-at-eof

## Input

```mical
key value
#
```

## JSON

```json
{
  "key": "value"
}
```

vim:ft=markdown
